--- a/archive.html
+++ b/archive.html
@@ -27,9 +27,18 @@ seo:
 
     <div class="max-w-screen-xl mx-auto md:columns-3">
 
-        {% assign site.posts  %}
+        {% assign featured_posts = site.posts | where: 'featured', true %}
 
-        {% %}
+        {% for post in featured_posts limit:12 %}
+
+            <a class="p-2 "
+            href="{{ post.url }}">
+
+
+
+            </a>
+
+        {% endfor %}
 
     </div>
 
