--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ seo:
 
 <!--------Header Banner----------->
 
-{% include header-banner.html %}
+{% include quarter-header-banner.html %}
 
 <!--------Text Section----------->
 
