--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@ background-position: bg-bottom
 text-position: items-center
 banner-height: min-h-80
 banner-image: /images/blog-bg-17.jpg
+pre-heading: Shop our
 heading: Curated Collection
 sub-heading: Nature teaches you to appreciate the finer things in life, to be present, live in the moment and just breath.
 seo:
@@ -35,9 +36,6 @@ seo:
         {% endfor %}
   
     </div>
-
-	<a href="#" class="text-2xl border-b-2 border-black uppercase font-serif"> Buy now </a>
-  
   
   </section>
 
@@ -46,7 +44,7 @@ seo:
 <section class="p-5p bg-cover bg-center min-h-60 text-white flex items-center" style="background-image: url('/images/blog-bg-10.jpg')">
     <div> 
 
-       <h3 class="text-4xl font-serif font-light max-w-md"> "Once you get a taste for travel, you'll never be the same." </h3>       
+       <h3 class="text-5xl font-serif font-light max-w-md"> "Once you get a taste for travel, you'll never be the same." </h3>       
 
     </div> 
 </section> 
@@ -56,7 +54,7 @@ seo:
 
 <section class="p-5p">
 
-    <h3 class="uppercase text-4xl text-center pb-5p"> Lightroom presets </h3>
+    <h3 class="uppercase text-4xl text-center pb-5p font-serif"> Lightroom presets </h3>
   
     <div class="grid grid-cols-3">
     
