--- a/members-login.html
+++ b/members-login.html
@@ -2,12 +2,14 @@
 layout: default
 ---
 
-<section class="grid grid-cols-3 gap-2 tall-80">
+<section class="grid grid-cols-2 gap-2 tall-80 p-5p">
 
-        <div class="col-span-2"style="text-align:center; padding:5%">
+        <div class="p-2"style="text-align:center">
+            <h4 class="font-serif text-3xl"> Sign up </h4>
+            <p> Sign up to our page to get exclusive access to new items in our online store </p>
             <iframe src="https://sunny-pants.cloudvent.net/members-login?msopen=/member/sign_in" width="100%" height="500" frameborder="0" seamless="true"></iframe>
         </div>
-        <div class="bg-image bg-cover" style="background-image: url('/uploads/travel/travel-1.jpg');"></div>
+        <div class="bg-image bg-cover" style="background-image: url('/images/blog-bg-17.jpg');"></div>
 
 </section>
 
@@ -16,5 +18,13 @@ layout: default
 <style> 
 
 .MemberSpaceWidgetInternal__BrandedInterface_footer {display: none; }
+
+.MemberSpaceWidgetInternal__TextInput_input:not(#MemberSpaceWidgetInternal__TextInput_-).MemberSpaceWidgetInternal__TextInput_variant-primary {
+background-color: #d4d1cd;
+border-color: #d4d1cd;
+border: 0;
+border-bottom: 2px solid;
+border-radius: 0;
+}
 
 </style> 
