--- a/members-login.html
+++ b/members-login.html
@@ -4,12 +4,12 @@ layout: default
 
 <section class="grid grid-cols-2 gap-2 tall-80 p-5p">
 
-        <div class="p-2"style="text-align:center">
+        <div class="p-2">
             <h4 class="font-serif text-3xl"> Sign up </h4>
-            <p> Sign up to our page to get exclusive access to new items in our online store </p>
+            <p class="mx-[9%]"> Sign up to our page to get exclusive access to new items in our online store </p>
             <iframe src="https://sunny-pants.cloudvent.net/members-login?msopen=/member/sign_in" width="100%" height="500" frameborder="0" seamless="true"></iframe>
         </div>
-        <div class="bg-image bg-cover" style="background-image: url('/images/blog-bg-17.jpg');"></div>
+        <div class="bg-image bg-cover min-h-50" style="background-image: url('/images/blog-bg-17.jpg');"></div>
 
 </section>
 
