--- a/members-login.html
+++ b/members-login.html
@@ -9,7 +9,7 @@ layout: default
             <p class="mx-[9%]"> Sign up to our page to get exclusive access to new items in our online store </p>
             <iframe src="https://sunny-pants.cloudvent.net/members-login?msopen=/member/sign_in" width="100%" height="500" frameborder="0" seamless="true"></iframe>
         </div>
-        <div class="bg-image bg-cover min-h-50" style="background-image: url('/images/blog-bg-17.jpg');"></div>
+        <div class="bg-image bg-cover bg-bottom min-h-50" style="background-image: url('/images/blog-bg-17.jpg');"></div>
 
 </section>
 
