Updated 1 file via CloudCannon.

--- a/members-area.html
+++ b/members-area.html
@@ -1,14 +1,13 @@
 ---
 layout: default
-members-content: 
-    - title: This is a title
-      content_html: some content 
-    - title: This is a second title 
-      content_html: some content 
-    - title: This is a third title 
-      content_html: some content
+members-content:
+  - title: This is a title
+    content_html: <p>some content</p>
+  - title: This is a second title
+    content_html: some content
+  - title: This is a third title
+    content_html: some content
 ---
-
 <!----image banner block---->
 
 <section class="p-5p bg-cover bg-center min-h-40 text-white flex items-center" style="background-image: url('/images/blog-bg-17.jpg')">
