--- a/members-login.html
+++ b/members-login.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<section class="grid grid-cols-2 gap-2 tall-80 p-5p">
+<section class="grid grid-cols-2 gap-2 tall-80 px-5p pb-5p" id="memberspace-login-form">
 
         <div class="p-2">
-            <h4 class="font-serif text-3xl"> Sign up </h4>
+            <h4 class="mx-[9%] pb-[5%] font-serif text-3xl"> Sign up </h4>
             <p class="mx-[9%]"> Sign up to our page to get exclusive access to new items in our online store </p>
             <iframe src="https://sunny-pants.cloudvent.net/members-login?msopen=/member/sign_in" width="100%" height="500" frameborder="0" seamless="true"></iframe>
         </div>
@@ -26,5 +26,29 @@ border: 0;
 border-bottom: 2px solid;
 border-radius: 0;
 }
+
+#memberspace-login-form input {
+ border: 2px solid blue;
+}
+
+#memberspace-login-form label {
+    border: 2px solid yellow;
+}
+
+/* Forgot Email / forgot password text */
+#memberspace-login-form .MemberSpaceWidgetInternal__InputWrapper_labelRight {
+    color: green;
+}
+
+
+#memberspace-login-form .MemberSpaceWidgetInternal__Button_variant-primary {
+    color: red;
+}
+
+#memberspace-login-form .MemberSpaceWidgetInternal__Button_variant-secondary {
+    color: blue;
+}
+ 
+.MemberSpaceWidgetInternal__BrandedInterface_footer {display: none; }
 
 </style> 
