--- a/members-login.html
+++ b/members-login.html
@@ -5,8 +5,8 @@ layout: default
 <section class="grid grid-cols-2 gap-2 tall-80 px-5p pb-5p" id="memberspace-login-form">
 
         <div class="p-2">
-            <h4 class="mx-[9%] pb-[5%] font-serif text-3xl"> Sign up </h4>
-            <p class="mx-[9%]"> Sign up to our page to get exclusive access to new items in our online store </p>
+            <h4 class="pb-[5%] font-serif text-3xl"> Sign up </h4>
+            <p> Sign up to our page to get exclusive access to new items in our online store </p>
             <iframe src="https://sunny-pants.cloudvent.net/members-login?msopen=/member/sign_in" width="100%" height="500" frameborder="0" seamless="true"></iframe>
         </div>
         <div class="bg-image bg-cover bg-bottom min-h-50" style="background-image: url('/images/blog-bg-17.jpg');"></div>
@@ -27,13 +27,17 @@ border-bottom: 2px solid;
 border-radius: 0;
 }
 
+/*
 #memberspace-login-form input {
  border: 2px solid blue;
 }
+*/
 
+/*
 #memberspace-login-form label {
     border: 2px solid yellow;
 }
+*/
 
 /* Forgot Email / forgot password text */
 #memberspace-login-form .MemberSpaceWidgetInternal__InputWrapper_labelRight {
@@ -45,9 +49,11 @@ border-radius: 0;
     color: red;
 }
 
+/*
 #memberspace-login-form .MemberSpaceWidgetInternal__Button_variant-secondary {
     color: blue;
 }
+*/
  
 .MemberSpaceWidgetInternal__BrandedInterface_footer {display: none; }
 
