--- a/members-login.html
+++ b/members-login.html
@@ -57,4 +57,9 @@ border-radius: 0;
  
 .MemberSpaceWidgetInternal__BrandedInterface_footer {display: none; }
 
+#memberspace-login-form ms-widget-ui {
+  display: flex;
+  justify-content: start;
+}
+
 </style> 
