--- a/members-login.html
+++ b/members-login.html
@@ -39,15 +39,24 @@ border-radius: 0;
 }
 */
 
+
+#memberspace-login-form *{
+    font-family: 'Montserrat', 'sans-serif';
+    text-transform: uppercase;
+}
+
+
 /* Forgot Email / forgot password text */
 #memberspace-login-form .MemberSpaceWidgetInternal__InputWrapper_labelRight {
     color: green;
 }
 
-
+/*
 #memberspace-login-form .MemberSpaceWidgetInternal__Button_variant-primary {
     color: red;
 }
+*/
+
 
 /*
 #memberspace-login-form .MemberSpaceWidgetInternal__Button_variant-secondary {
