--- a/members-login.html
+++ b/members-login.html
@@ -47,8 +47,8 @@ border-radius: 0;
 
 
 /* Forgot Email / forgot password text */
-#memberspace-login-form .MemberSpaceWidgetInternal__InputWrapper_labelRight {
-    color: green;
+#memberspace-login-form .MemberSpaceWidgetInternal__InputWrapper_labelRight .MemberSpaceWidgetInternal__Button_variant-link {
+    color: black;
 }
 
 /*
