Updated 1 file via CloudCannon.

--- a/members-area.html
+++ b/members-area.html
@@ -3,18 +3,19 @@ layout: default
 members-content:
   - title: hello beautiful mountains
     content_html: >-
-      <p><img width="1768" height="1288" src="/images/blog-bg-11.jpg"
-      /></p><h2><strong>hello beautiful mountains</strong></h2><p>Lorem ipsum
-      dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-      nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-      non proident, sunt in culpa qui officia deserunt mollit anim id est
-      laborum.</p><p>Duis aute irure dolor in reprehenderit in voluptate velit
-      esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+      <p><img class="one-half-image" width="1768" height="1288"
+      src="/images/blog-bg-11.jpg" /><img src="/images/blog-bg-10.jpg"
+      class="one-half-image" width="2254" height="1698" /></p><h2><strong>hello
+      beautiful mountains</strong></h2><p>Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+      nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum.</p><p>Duis aute
+      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+      fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+      sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   - title: This is a second title
     content_html: some content
   - title: This is a third title
