--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ banner:
           <p class="text-center md:text-left"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima libero, commodi harum sit exercitationem doloribus amet sequi reiciendis? Dolore velit rerum dolores enim cupiditate harum optio explicabo delectus aliquam eius.</p>
           </div>
 
-          <a href="#" class="text-center md:text-left text-xs md:text-2xl border-b-2 border-black uppercase font-serif tracking-wide "> Read more </a>
+          <a href="#" class="editable text-center md:text-left text-xs md:text-2xl border-b-2 border-black uppercase font-serif tracking-wide "> Read more </a>
     </div>
   
   </div>
