--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@ banner-image: /images/blog-bg-17.jpg
 pre-heading: Shop our
 heading: Curated Collection
 sub-heading: Nature teaches you to appreciate the finer things in life, to be present, live in the moment and just breath.
+mid-page-banner-image: /images/blog-bg-10.jpg
 seo:
   title: 
   description:
@@ -41,10 +42,10 @@ seo:
 
 
 <!----image banner block---->
-<section class="p-5p bg-cover bg-center min-h-60 text-white flex items-center" style="background-image: url('/images/blog-bg-10.jpg')">
+<section class="p-5p bg-cover bg-center min-h-60 text-white flex items-center" style="background-image: url('{{page.mid-page-banner-image}}')">
     <div> 
 
-       <h3 class="text-5xl font-serif font-light max-w-md"> "Once you get a taste for travel, you'll never be the same." </h3>       
+       <h3 class="editable text-5xl font-serif font-light max-w-md"> "Once you get a taste for travel, you'll never be the same." </h3>       
 
     </div> 
 </section> 
